<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="*"
    android:background="@color/activityBack">
    <TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/baseline_terminal_24"
                android:layout_weight="2"
                android:onClick="toTerminal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/baseline_info_24"
                android:layout_weight="2"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Inserisci i gradfici qui-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_info_section_cpu"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/texts"/>
                <com.anychart.AnyChartView
                    android:id="@+id/cpuPieGraph"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_info_section_ram"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/texts"/>
                <com.anychart.AnyChartView
                    android:id="@+id/ramTotalToFreePieGraph"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>
                <com.anychart.AnyChartView
                    android:id="@+id/ramCommittedPieGraph"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/string_info_section_players"
                    android:textColor="@color/texts"/>
                <ListView
                    android:id="@+id/playersList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/string_info_section_addons"
                    android:textColor="@color/texts"/>
                <ListView
                    android:id="@+id/addonsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
        </ScrollView>
    </TableRow>
</TableLayout>